# async_cosmic_python

./: .gitignore  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements.txt
allocation/: bootstrap.py  config.py
allocation/adapter/: email_sender.py  orm.py  outbox.py  repository.py  unit_of_work.py
allocation/domain/messages/: base.py  commands.py  events.py
allocation/domain/models/: __init__.py  aggregate.py  bases.py  batch.py  entity.py  order_line.py  product.py  value_object.py
allocation/entrypoint/: fastapi_.py
allocation/entrypoint/pre_start/: add_connector.py  create_table.py  wait_database.py
allocation/port/: __init__.py  email_sender.py  outbox.py  repository.py  unit_of_work.py
allocation/service/: exceptions.py  handlers.py  message_bus.py  views.py
allocation/service/handlers/: handlers.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml
docker/envs/dev/: allocation.env  connect.env  kafka-ui.env  kafkaui.env  pgadmin.env
docker/envs/local/: allocation.env  postgres.env
tests/: conftest.py  random_refs.py
tests/integration/: test_email.py  test_repository.py  test_uow.py  test_view.py
tests/unit/: test_batchs.py  test_handlers.py  test_product.py
